# learning-asyncio

./: .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
notes/: lesson_template.py  progression.md  recommendations.md
notes/libs/: cpython-asyncio-doctest.md
src/: 001_intro.py  001_simple_async.py  002_await_coroutine.py  002_awaiting_and_returning.py  003_asyncio_gathere.py  003_coroutines_concurrently.py  004_exception_handling.py  005_creating_tasks.py  005_explicit_task_management.py  006_asyncio_lock.py  006_blocking_calls.py  006_locks.py  006_task_groups.py  007_asyncio_semaphore.py  007_locks.py  007_semaphores.py  008_asyncio_queue.py  008_locks.py  008_queue.py  008_semaphores.py  009_asyncio_event.py  009_event.py  009_queue.py  009_semaphores.py  010_asyncio_condition.py  010_condition.py  010_event.py  010_queue.py  011_asyncio_barrier.py  011_barriers.py  011_condition.py  011_event.py  012_asyncio_streams.py  012_barriers.py  012_condition.py  012_streams.py  013_asyncio_event.py  013_asyncio_subprocess.py  013_barriers.py  013_streams.py  (+36 more)
