[tool.poetry]
name = "learning-asyncio"
version = "0.1.0"
description = ""
authors = ["Tony Narlock <tony@git-pull.com>"]
license = "All Rights Reseerved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
